--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var gridy = 0
 var pxl = 32  //img size
 //part of the image selection 
 var imgsel = 0
-var imname = "empty.gif"
+var imname = "empty.GIF"
 //all the vars from here on are for my insane grid generator thingy
 var g = 24 //no of cells going ----->
 var gy = 24 //I dunno
@@ -95,7 +95,7 @@ function drawgrid(){
 	paper.image(imname,gridx,gridy,pxl,pxl);
 	//console.log("imagetype:",imname);
 	//reset the image to empty just in case it gets stuck
-	imname = "empty.gif";
+	imname = "empty.GIF";
     //console.log("array entry:",entry);
 	//console.log("grid x:",gridx);
 	//console.log("grid y:",gridy);
