--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function drawgrid(){
 	paper.image(imname,gridx,gridy,pxl,pxl);
 	//console.log("imagetype:",imname);
 	//reset the image to empty just in case it gets stuck
-	imname = "empty.GIF";
+	imname = "empty.png";
     //console.log("array entry:",entry);
 	//console.log("grid x:",gridx);
 	//console.log("grid y:",gridy);
